@@ -2,6 +2,9 @@
 Change log for block_taskchain_navigation
 ========================================
 
+2020-06-30 (22)
+ - add settings for individual grades in the grade book
+
 2020-05-12 (21)
  - small fix to SQL for compatability with PostgreSQL
 
